--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,10 +1,12 @@
+name: Check
+
 on:
   - push
   - pull_request
   - workflow_dispatch
 
 jobs:
-  test:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
