--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "author": {
     "name": "Md. Touhidur Rahman",
     "email": "তালিকা@তৌহিদুর.বাংলা",
-    "url": "তৌহিদুর.বাংলা"
+    "url": "https://তৌহিদুর.বাংলা"
   },
   "scripts": {
     "format": "prettier --write scripts .github && bun scripts/format.ts"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.19",
-    "@types/validator": "^13.15.2",
+    "@types/bun": "^1.2.21",
+    "@types/validator": "^13.15.3",
     "prettier": "^3.6.2",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "validator": "^13.15.15"
   }
 }
